src/app/components/ImageText/ImageText.module.css
.container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 1rem;
  margin-top: 2rem;
  margin-bottom: 2rem;
  padding: 2rem;
  position: relative; /* Add position: relative to establish stacking context */
}

.inverted {
  flex-direction: row-reverse;
}

.content {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 6rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  position: relative; /* Add position: relative */
  z-index: 2; /* Set z-index higher than BlueCircle */
}

.containerHelper {
  flex: 0.1;
}

.title {
  align-self: flex-start;
  text-align: left;
  padding: 1rem;
  font-size: 1.5rem;
}

.text {
  align-self: flex-start;
  text-align: left;
  padding: 1rem;
}

  .duration {
    font-size: 32px;
    font-style: normal;
    font-weight: 400;
    line-height: 34px; /* 106.25% */
    text-transform: uppercase;
    padding-left: 1rem;
    padding-right: 1rem;
  }

.image {
  max-width: 45%;
  max-height: 100%;
  margin-right: 20px;
  object-fit: cover;
}

.blueCircleWrapper {
  position: absolute;
  top: -240px;
  left: 0;
  z-index: 1; /* Set z-index lower than Content */
  height: 720px;
  width: 720px;
}

.circularButtonWrapper {
  padding-top: 2rem;
}

  
  /* Media query for bigger layout */
  @media (max-width: 1920px) {
    .containerHelper {
        flex: 0;
    }
  }

  /* Media query for bigger layout */
  @media (min-width: 1820px) {
    .image {
        height: 50rem;
        width: auto;
    }
  }

    /* Media query for smaller layout */
  @media (max-width: 1460px) {
    .blueCircleWrapper {
      top: -180px;
      height: 520px;
      width: 520px;
    }

    .content {
      padding: 2rem;
    }
  }

  /* Media query for mobile layout */
  @media (max-width: 1024px) {
  .container,
  .text,
  .title {
    flex-direction: column; /* Switch to a vertical layout for smaller screens */
    align-items: flex-start; /* Align items to the top left in mobile layout */
  }

  .image {
    align-self: center;
  }

  .content {
    padding: 1rem;
  }

  .container {
    margin-top: 1rem; /* Add spacing at the top of each component */
    margin-bottom: 2rem; /* Add spacing at the bottom of each component */
  }

  .title,
  .text {
    margin-left: 2rem;
    margin-right: 2rem;
    margin-bottom: 1rem;
    padding: 0;
  }

  .duration {
    font-size: 32px;
    font-style: normal;
    font-weight: 400;
    line-height: 34px; /* 106.25% */
    text-transform: uppercase;
    margin-left: 2rem;
    margin-right: 2rem;
    padding: 0;
  }

  .image {
    max-width: 100%; /* Allow the image to take the full width in mobile layout */
    margin-right: 0; /* Remove margin for mobile layout */
    padding: 2rem;
  }

   .blueCircleWrapper {
    top: 0px;
    height: 0px;
    width: 0px;
  }
}

